--- a/.env.prod.template
+++ b/.env.prod.template
@@ -16,3 +16,5 @@ GF_SERVER_HTTP_PORT=3000  # Configura Grafana para que use 8080 dentro del conte
 GF_SECURITY_ADMIN_USER="admin"
 GF_SECURITY_ADMIN_PASSWORD="admin"
 GF_USERS_ALLOW_SIGN_UP=false
+
+RUTA_FOTOS=./backend/uploads
