--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -25,7 +25,7 @@ services:
       - database
     restart: on-failure
     healthcheck:
-      test: curl --fail http://10.50.59.151:3000/api/db-check || exit 1 
+      test: curl --fail http://localhost:3000/api/db-check || exit 1 
       interval: 20m
       timeout: 30m
       retries: 5
